--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ thiserror = "1.0"
 sha2 = "0.10"
 bincode = "1.3"
 group-core = { path = "../core" }
+chrono = { version = "0.4", features = ["serde"] }
